// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentTray renders 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": false,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Results": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Items": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Items",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Items",
                  ],
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": false,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Results",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "Row",
              "tag": [Function],
              "tags": Array [
                "Results",
              ],
              "type": "Row",
              "visible": true,
              "w": 1920,
              "x": 0,
              "y": 160,
              "zIndex": 0,
            },
            "Tabs": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Items": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Element-12": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "children": Object {
                        "Item": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "children": Object {
                            "Image": Object {
                              "active": false,
                              "alpha": 1,
                              "attached": true,
                              "boundsMargin": null,
                              "clipping": false,
                              "color": 4294967295,
                              "enabled": true,
                              "flex": false,
                              "flexItem": false,
                              "h": 100,
                              "isComponent": undefined,
                              "mount": 0,
                              "mountX": 0,
                              "mountY": 0,
                              "pivot": 0.5,
                              "pivotX": 0.5,
                              "pivotY": 0.5,
                              "ref": "Image",
                              "renderOfScreen": undefined,
                              "renderToTexture": true,
                              "scale": 1,
                              "scaleX": 1,
                              "scaleY": 1,
                              "state": undefined,
                              "tag": [Function],
                              "tags": Array [
                                "Image",
                              ],
                              "texture": Object {
                                "src": "https://edge.myriad-gn.top.comcast.net/select/image?roundAmount=16&outputFormat=png&entityId=6887896329265323242&width=140&ratio=1x1&rule=title&default=true&preferredLanguage=en-US",
                                "type": "ImageTexture",
                              },
                              "visible": true,
                              "w": 100,
                              "x": 0,
                              "y": 0,
                              "zIndex": 2,
                            },
                          },
                          "clipping": false,
                          "color": 4294967295,
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "isComponent": undefined,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "Item",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "Item",
                          ],
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 0,
                        },
                      },
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": true,
                      "flex": false,
                      "flexItem": false,
                      "h": 100,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": null,
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "type": "Tile",
                      "visible": true,
                      "w": 100,
                      "x": 124,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Element-15": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "children": Object {
                        "Item": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "children": Object {
                            "Image": Object {
                              "active": false,
                              "alpha": 1,
                              "attached": true,
                              "boundsMargin": null,
                              "clipping": false,
                              "color": 4294967295,
                              "enabled": true,
                              "flex": false,
                              "flexItem": false,
                              "h": 100,
                              "isComponent": undefined,
                              "mount": 0,
                              "mountX": 0,
                              "mountY": 0,
                              "pivot": 0.5,
                              "pivotX": 0.5,
                              "pivotY": 0.5,
                              "ref": "Image",
                              "renderOfScreen": undefined,
                              "renderToTexture": true,
                              "scale": 1,
                              "scaleX": 1,
                              "scaleY": 1,
                              "state": undefined,
                              "tag": [Function],
                              "tags": Array [
                                "Image",
                              ],
                              "texture": Object {
                                "src": "https://edge.myriad-gn.top.comcast.net/select/image?roundAmount=16&outputFormat=png&entityId=5834457307371791242&width=140&ratio=1x1&rule=title&default=true&preferredLanguage=en-US",
                                "type": "ImageTexture",
                              },
                              "visible": true,
                              "w": 100,
                              "x": 0,
                              "y": 0,
                              "zIndex": 2,
                            },
                          },
                          "clipping": false,
                          "color": 4294967295,
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "isComponent": undefined,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "Item",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "Item",
                          ],
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 0,
                        },
                      },
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": true,
                      "flex": false,
                      "flexItem": false,
                      "h": 100,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": null,
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "type": "Tile",
                      "visible": true,
                      "w": 100,
                      "x": 248,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Element-9": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "children": Object {
                        "DropShadow": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "clipping": false,
                          "color": "99000000",
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 0,
                          "isComponent": undefined,
                          "mount": 0.5,
                          "mountX": 0.5,
                          "mountY": 0.5,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "DropShadow",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "DropShadow",
                          ],
                          "texture": Object {
                            "type": "StaticCanvasTexture",
                          },
                          "visible": true,
                          "w": 0,
                          "x": 50,
                          "y": 74,
                          "zIndex": 1,
                        },
                        "FocusRing": Object {
                          "active": false,
                          "alpha": 0,
                          "attached": true,
                          "boundsMargin": null,
                          "clipping": false,
                          "color": 4125945074,
                          "enabled": false,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "hasFinalFocus": false,
                          "hasFocus": false,
                          "isComponent": true,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "FocusRing",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": "",
                          "tag": [Function],
                          "tags": Array [
                            "FocusRing",
                          ],
                          "type": "FocusRing",
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 1,
                        },
                        "Item": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "children": Object {
                            "Image": Object {
                              "active": false,
                              "alpha": 1,
                              "attached": true,
                              "boundsMargin": null,
                              "clipping": false,
                              "color": 4294967295,
                              "enabled": true,
                              "flex": false,
                              "flexItem": false,
                              "h": 100,
                              "isComponent": undefined,
                              "mount": 0,
                              "mountX": 0,
                              "mountY": 0,
                              "pivot": 0.5,
                              "pivotX": 0.5,
                              "pivotY": 0.5,
                              "ref": "Image",
                              "renderOfScreen": undefined,
                              "renderToTexture": true,
                              "scale": 1,
                              "scaleX": 1,
                              "scaleY": 1,
                              "state": undefined,
                              "tag": [Function],
                              "tags": Array [
                                "Image",
                              ],
                              "texture": Object {
                                "src": "https://edge.myriad-gn.top.comcast.net/select/image?roundAmount=16&outputFormat=png&entityId=6847411883730560242&width=140&ratio=1x1&rule=title&default=true&preferredLanguage=en-US",
                                "type": "ImageTexture",
                              },
                              "visible": true,
                              "w": 100,
                              "x": 0,
                              "y": 0,
                              "zIndex": 2,
                            },
                          },
                          "clipping": false,
                          "color": 4294967295,
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "isComponent": undefined,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "Item",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "Item",
                          ],
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 0,
                        },
                      },
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": true,
                      "flex": false,
                      "flexItem": false,
                      "h": 100,
                      "hasFinalFocus": true,
                      "hasFocus": true,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": null,
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "type": "Tile",
                      "visible": true,
                      "w": 100,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 100,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Items",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Items",
                  ],
                  "visible": true,
                  "w": 348,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": false,
              "h": 100,
              "hasFinalFocus": false,
              "hasFocus": true,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Tabs",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "Row",
              "tag": [Function],
              "tags": Array [
                "Tabs",
              ],
              "type": "Row",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 160,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 1920,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 1080,
      "hasFinalFocus": false,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Column",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Column",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`ContentTray renders items in tabs and results 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": false,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Results": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Items": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Items",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Items",
                  ],
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": false,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Results",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "Row",
              "tag": [Function],
              "tags": Array [
                "Results",
              ],
              "type": "Row",
              "visible": true,
              "w": 1920,
              "x": 0,
              "y": 160,
              "zIndex": 0,
            },
            "Tabs": Object {
              "active": false,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Items": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Element-57": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "children": Object {
                        "DropShadow": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "clipping": false,
                          "color": "99000000",
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 0,
                          "isComponent": undefined,
                          "mount": 0.5,
                          "mountX": 0.5,
                          "mountY": 0.5,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "DropShadow",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "DropShadow",
                          ],
                          "texture": Object {
                            "type": "StaticCanvasTexture",
                          },
                          "visible": true,
                          "w": 0,
                          "x": 50,
                          "y": 74,
                          "zIndex": 1,
                        },
                        "FocusRing": Object {
                          "active": false,
                          "alpha": 0,
                          "attached": true,
                          "boundsMargin": null,
                          "clipping": false,
                          "color": 4125945074,
                          "enabled": false,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "hasFinalFocus": false,
                          "hasFocus": false,
                          "isComponent": true,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "FocusRing",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": "",
                          "tag": [Function],
                          "tags": Array [
                            "FocusRing",
                          ],
                          "type": "FocusRing",
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 1,
                        },
                        "Item": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "children": Object {
                            "Image": Object {
                              "active": false,
                              "alpha": 1,
                              "attached": true,
                              "boundsMargin": null,
                              "clipping": false,
                              "color": 4294967295,
                              "enabled": true,
                              "flex": false,
                              "flexItem": false,
                              "h": 100,
                              "isComponent": undefined,
                              "mount": 0,
                              "mountX": 0,
                              "mountY": 0,
                              "pivot": 0.5,
                              "pivotX": 0.5,
                              "pivotY": 0.5,
                              "ref": "Image",
                              "renderOfScreen": undefined,
                              "renderToTexture": true,
                              "scale": 1,
                              "scaleX": 1,
                              "scaleY": 1,
                              "state": undefined,
                              "tag": [Function],
                              "tags": Array [
                                "Image",
                              ],
                              "texture": Object {
                                "src": "https://edge.myriad-gn.top.comcast.net/select/image?roundAmount=16&outputFormat=png&entityId=6847411883730560242&width=140&ratio=1x1&rule=title&default=true&preferredLanguage=en-US",
                                "type": "ImageTexture",
                              },
                              "visible": true,
                              "w": 100,
                              "x": 0,
                              "y": 0,
                              "zIndex": 2,
                            },
                          },
                          "clipping": false,
                          "color": 4294967295,
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "isComponent": undefined,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "Item",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "Item",
                          ],
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 0,
                        },
                      },
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": true,
                      "flex": false,
                      "flexItem": false,
                      "h": 100,
                      "hasFinalFocus": true,
                      "hasFocus": true,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": null,
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "type": "Tile",
                      "visible": true,
                      "w": 100,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Element-60": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "children": Object {
                        "Item": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "children": Object {
                            "Image": Object {
                              "active": false,
                              "alpha": 1,
                              "attached": true,
                              "boundsMargin": null,
                              "clipping": false,
                              "color": 4294967295,
                              "enabled": true,
                              "flex": false,
                              "flexItem": false,
                              "h": 100,
                              "isComponent": undefined,
                              "mount": 0,
                              "mountX": 0,
                              "mountY": 0,
                              "pivot": 0.5,
                              "pivotX": 0.5,
                              "pivotY": 0.5,
                              "ref": "Image",
                              "renderOfScreen": undefined,
                              "renderToTexture": true,
                              "scale": 1,
                              "scaleX": 1,
                              "scaleY": 1,
                              "state": undefined,
                              "tag": [Function],
                              "tags": Array [
                                "Image",
                              ],
                              "texture": Object {
                                "src": "https://edge.myriad-gn.top.comcast.net/select/image?roundAmount=16&outputFormat=png&entityId=6887896329265323242&width=140&ratio=1x1&rule=title&default=true&preferredLanguage=en-US",
                                "type": "ImageTexture",
                              },
                              "visible": true,
                              "w": 100,
                              "x": 0,
                              "y": 0,
                              "zIndex": 2,
                            },
                          },
                          "clipping": false,
                          "color": 4294967295,
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "isComponent": undefined,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "Item",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "Item",
                          ],
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 0,
                        },
                      },
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": true,
                      "flex": false,
                      "flexItem": false,
                      "h": 100,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": null,
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "type": "Tile",
                      "visible": true,
                      "w": 100,
                      "x": 124,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Element-63": Object {
                      "active": false,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "children": Object {
                        "Item": Object {
                          "active": false,
                          "alpha": 1,
                          "attached": true,
                          "boundsMargin": null,
                          "children": Object {
                            "Image": Object {
                              "active": false,
                              "alpha": 1,
                              "attached": true,
                              "boundsMargin": null,
                              "clipping": false,
                              "color": 4294967295,
                              "enabled": true,
                              "flex": false,
                              "flexItem": false,
                              "h": 100,
                              "isComponent": undefined,
                              "mount": 0,
                              "mountX": 0,
                              "mountY": 0,
                              "pivot": 0.5,
                              "pivotX": 0.5,
                              "pivotY": 0.5,
                              "ref": "Image",
                              "renderOfScreen": undefined,
                              "renderToTexture": true,
                              "scale": 1,
                              "scaleX": 1,
                              "scaleY": 1,
                              "state": undefined,
                              "tag": [Function],
                              "tags": Array [
                                "Image",
                              ],
                              "texture": Object {
                                "src": "https://edge.myriad-gn.top.comcast.net/select/image?roundAmount=16&outputFormat=png&entityId=5834457307371791242&width=140&ratio=1x1&rule=title&default=true&preferredLanguage=en-US",
                                "type": "ImageTexture",
                              },
                              "visible": true,
                              "w": 100,
                              "x": 0,
                              "y": 0,
                              "zIndex": 2,
                            },
                          },
                          "clipping": false,
                          "color": 4294967295,
                          "enabled": true,
                          "flex": false,
                          "flexItem": false,
                          "h": 100,
                          "isComponent": undefined,
                          "mount": 0,
                          "mountX": 0,
                          "mountY": 0,
                          "pivot": 0.5,
                          "pivotX": 0.5,
                          "pivotY": 0.5,
                          "ref": "Item",
                          "renderOfScreen": undefined,
                          "renderToTexture": false,
                          "scale": 1,
                          "scaleX": 1,
                          "scaleY": 1,
                          "state": undefined,
                          "tag": [Function],
                          "tags": Array [
                            "Item",
                          ],
                          "visible": true,
                          "w": 100,
                          "x": 0,
                          "y": 0,
                          "zIndex": 0,
                        },
                      },
                      "clipping": false,
                      "color": 4294967295,
                      "enabled": true,
                      "flex": false,
                      "flexItem": false,
                      "h": 100,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": null,
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "type": "Tile",
                      "visible": true,
                      "w": 100,
                      "x": 248,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 100,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Items",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Items",
                  ],
                  "visible": true,
                  "w": 348,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": false,
              "h": 100,
              "hasFinalFocus": false,
              "hasFocus": true,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Tabs",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "Row",
              "tag": [Function],
              "tags": Array [
                "Tabs",
              ],
              "type": "Row",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 160,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 1920,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 1080,
      "hasFinalFocus": false,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Column",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Column",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;
